<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="sharedPreferencesApi"
            type="ru.uxfeedback.demoapplication.api.prefs.SharedPreferencesApi" />
        <variable
            name="bindingHolder"
            type="ru.uxfeedback.demoapplication.ui.fragments.presenter.PresenterFragment.BindingHolder" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/OutlinedButtonStyle"
        android:layout_marginEnd="16dp"
        android:onClickListener="@{_ -> bindingHolder.startSecondActivityClick()}"
        android:text="@string/start_second_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEventName" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarShowCampaign"
        android:layout_width="0dp"
        style="@style/ToolbarStyle.NavigationDisabled"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/show_campaigns" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiAppId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/app_id"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveAppId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarShowCampaign">

        <AutoCompleteTextView
            android:id="@+id/actvAppId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setupAppIdItemClickListener="@{bindingHolder}"
            app:setupAppIdAdapter="@{sharedPreferencesApi}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveAppId"
        style="@style/OutlinedButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_save"
        android:onClickListener="@{_ -> bindingHolder.saveAppIdClick(actvAppId.getText().toString())}"
        app:layout_constraintBottom_toBottomOf="@+id/tiAppId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tiAppId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEventName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/event_name"
        app:layout_constraintEnd_toStartOf="@+id/btnEventName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiAppId">

        <AutoCompleteTextView
            android:id="@+id/actvEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setupEventNameClickListener="@{bindingHolder}"
            app:setupEventNameAdapter="@{sharedPreferencesApi}" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEventName"
        style="@style/OutlinedButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_save"
        android:onClickListener="@{_ -> bindingHolder.saveEventIdClick(actvEventName.getText().toString())}"
        app:layout_constraintBottom_toBottomOf="@+id/tiEventName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tiEventName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartCampaign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClickListener="@{_ -> bindingHolder.stopCampaign()}"
        android:text="@string/stop_campaign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStopCampaign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClickListener="@{_ -> bindingHolder.startCampaign(actvEventName.getText().toString())}"
        android:text="@string/start_campaign"
        app:layout_constraintBottom_toTopOf="@+id/btnStartCampaign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>